Added apis and tests for recipes

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+coverage/
+public/
+coverage.xml
+public/report.xml
 
 # Translations
 *.mo
@@ -77,3 +81,4 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+public/report.xml
