--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ exclude = [
     "dist",
     "node_modules",
     "venv",
-    "./src/recipes_main/testing_settings.py",
+    "./src/recipes_main/test_settings.py",
 ]
+force-exclude = true
 
 # Same as Black.
 line-length = 100
