--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=recipes_main.testing_settings
+DJANGO_SETTINGS_MODULE=recipes_main.test_settings
 python_files = tests.py test_*.py *_tests.py
