--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,19 +34,43 @@ exclude = [
 ]
 force-exclude = true
 
-# Same as Black.
 line-length = 100
 
-# Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-# Assume Python 3.10.
 target-version = "py310"
 
 [tool.ruff.mccabe]
-# Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
 [tool.black]
 line-length = 100
 extend-exclude = ""
+
+[tool.poetry]
+name = "recipes"
+version = "0.1.0"
+description = ""
+authors = ["Emese Boga <e.boga@ateme.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "~3.11"
+djangorestframework = "3.14.0"
+django = "4.2.5"
+pytest = "7.4.3"
+pytest-django = "4.7.0"
+coverage = "7.3.3"
+black = "23.12.0"
+ruff = "0.1.8"
+whitenoise = "6.6.0"
+colorlog = "6.8.0"
+isort = "5.13.2"
+psycopg2-binary = "2.9.8"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
